@@ -35,6 +35,8 @@ Version 4.3.1  [ 28 April, 2006 ]
         - Added a workaround for the icon problems that arise when using
           GNU/Linux distributions with buggy icon themes
         - Added 48x48 and 64x64 icons for Regina and its data files
+    TEST SUITE:
+        - New tests for recognising bad subgraphs within face pairing graphs.
 
 Version 4.3  [ 27 March, 2006 ]
 
